@@ -328,7 +328,6 @@ $pgv_lang["select_an_option"]					= "Select an option below:";
 $pgv_lang["SERVER_URL"]							= "PhpGedView URL";
 $pgv_lang["show_phpinfo"]						= "Show PHP information page";
 $pgv_lang["siteadmin"]							= "Site administrator";
-$pgv_lang["skip_cleanup"]						= "Skip Cleanup";
 $pgv_lang["sqlite"]								= "SQLite";
 $pgv_lang["sybase"]								= "Sybase";
 $pgv_lang["sync_gedcom"]						= "Synchronize User Settings with GEDCOM Data";
