@@ -484,7 +484,6 @@ $pgv_lang["invalid_header_help"]		= "~UNGÜLTIGER GEDCOM HEADER~<br />Eine GEDCO
 $pgv_lang["macfile_detected_help"]		= "~MACINTOSH DATEI ERKANNT~<br />PhpGedView hat erkannt, dass Ihre GEDCOM-Datei auf einem Macintosh Computer erstellt wurde.<br /><br /Macintosh-Dateien enthalten andere Zeilenumbrüche als die in in Unix oder Windows erstellten. Die PHP-Funktionen, die PhpGedView benutzt, verlangen das Unix- oder Windows-Format. Wenn Sie auf «Korrigieren» klicken, wird Ihre Datei in eine Windows-Datei umgewandelt.<br /><br />";
 $pgv_lang["cleanup_places_help"]		= "~ORTE KORRIGIEREN~<br />PhpGedView hat erkannt, dass Ihre GEDCOM-Datei Ortsangaben zu GEDCOM-Daten macht, die keine Ortsangaben zulassen.<br /><br /Manche Genealogie-Programme, z.B. Family Tree Maker, erstellen solche GEDCOM-Dateien. PhpGedView funktioniert zwar mit solchen Dateien, aber es tauchen einige ungültige Orte in der Ortsliste auf.<br /><br />Beipiel: Ihre GEDCOM-Datei enthält folgende Zeilen<br />1 SSN<br />2 PLAC 123-45-6789<br />1 OCCU<br />2 PLAC Architekt<br /><br />Nach den geltenden GEDCOM Regeln sollte dies eigentlich wie folgt notiert sein<br />1 SSN 123-45-6789<br />1 OCCU Architekt<br /><br />Wenn Sie diese Option auf <b>#pgv_lang[yes]#</b> setzen, wird PhpGedView automatisch solche Fehler korrigieren.<br /><br />";
 $pgv_lang["empty_lines_detected_help"]	= "~LEERE ZEILEN ERKANNT~<br />PhpGedView hat erkannt, dass in Ihrer GEDCOM-Datei Leerzeilen enthalten sind. Diese Zeilen können zu Fehlern führen und werden vor dem Import aus der Datei entfernt.<br /><br />";
-$pgv_lang["skip_cleanup_help"]			= "~KORRIGIEREN ÜBERSPRINGEN~<br />Sie sollten unbedingt die von PGV vorgeschlagene Korrektur durchführen, bevor Sie die Daten importieren, andernfalls könnten einige Funktionen nicht ordnungsgemäß arbeiten.<br /><br />Sie haben aber die Möglichkeit, die vorgeschlagenen Korrekturen zu überspringen, indem Sie diesen Button klicken, um mit dem Import der unveränderten Datei fortzufahren.<br /><br />";
 
 //-- Edit Config
 $pgv_lang["help_editconfig.php"]		= "~PhpGedView KONFIGURIEREN~<br />Auf dieser Seite werden die Grundeinstellungen des Programmes vorgenommen, nachdem PhpGedView neu auf Ihrem Server installiert wurde und zum ersten Mal gestartet wird.<br /><br />#pgv_lang[review_readme]#Da diese <b>Grund</b>einstellungen sind, gelten sie für das gesamte Programm und für alle Datenbanken, die Sie darin benutzen.<br /><br />Für jede Datenbank können Sie zusätzlich noch jeweils eigene Einstellungen festlegen. Auf diser Konfigurations-Seite können Sie auch das Link zur GEDCOM-Verwaltung direkt über der Tabelle klicken. Normalerweise finden Sie dieses Link im Menü «Mein GedView Portal».<br /><br />";
