@@ -481,7 +481,6 @@ $pgv_lang["invalid_header_help"]		= "~INVALID GEDCOM HEADER~<br /><br />A GEDCOM
 $pgv_lang["macfile_detected_help"]		= "~MACINTOSH FILE DETECTED~<br /><br />PhpGedView detected that your GEDCOM file was created on a Macintosh computer.<br /><br />Macintosh files end each line with a CR control code.  CR is Ctrl+M.<br />Unix files end each line with an LF control code.  LF is Ctrl+J.<br />Windows and DOS use a two-code sequence, CR followed by LF.<br /><br />PhpGedView requires that all files use Unix or DOS line endings. When you click the Cleanup button, your line endings will be converted accordingly.<br /><br />";
 $pgv_lang["cleanup_places_help"]		= "~CLEANUP PLACES~<br /><br />PhpGedView detected that your GEDCOM file uses places on GEDCOM tags that should not have places.<br /><br />Many genealogy programs, such as Family Tree Maker, will create this type of GEDCOM file. PhpGedView will work with these GEDCOM files, but some invalid places will show up in your place hierarchy. <br /><br />For example, your GEDCOM might have the following encoding<br />1 SSN<br />2 PLAC 123-45-6789<br />1 OCCU<br />2 PLAC Computer Programmer<br /><br />According to the GEDCOM 5.5.1 Standard this should really be shown as<br />1 SSN 123-45-6789<br />1 OCCU Computer Programmer<br /><br />If you select <b>Yes</b>, PhpGedView will automatically correct these encoding errors.<br /><br />";
 $pgv_lang["empty_lines_detected_help"]	= "~EMPTY LINES DETECTED~<br /><br />PhpGedView has detected that there are empty lines in your input file. These lines may cause errors and will be removed from the file before it is imported.<br /><br />";
-$pgv_lang["skip_cleanup_help"]			= "~SKIP CLEANUP~<br /><br />It is strongly recommended that you allow PhpGedView to clean up your file before it is imported, otherwise some of the functions may not work properly.<br /><br />If you insist on doing so, you may click this button to skip the cleanup step and continue importing the file unchanged.<br /><br /><b>Be aware that if you refuse permission for PhpGedView to clean up the input file, certain functions of PhpGedView may produce unpredictable results.</b><br /><br />";
 
 //-- Edit Config
 $pgv_lang["help_editconfig.php"]		= "~CONFIGURE PhpGedView~<br /><br />On this page you configure the global settings for PhpGedView.  You have to do this after you have installed PhpGedView and are running it for the first time.<br /><br />#pgv_lang[review_readme]#As these settings are <b>global</b>, they are for the whole program and for all genealogical databases you use with PhpGedView.<br /><br />Each genealogical database also has additional configuration options that you set after clicking the <b>#pgv_lang[admin_gedcoms]#</b> link on this page.<br /><br />You can also access the #pgv_lang[gedcom_adm_head]# function from the main Admin page, whose link is found under the #pgv_lang[mgv]# icon or in the header of most pages.  On the Admin page, the relevant link is called <b>#pgv_lang[manage_gedcoms]#.</b><br /><br />";
